# libmei

./: .checkpatch.conf  .cmake-format.py  .codespellrc  .gitignore  .gitlint  Android.mk  CHANGELOG  CHANGELOG.md  CMakeLists.txt  DESCRIPTION  LICENSE  Makefile  README.md  SECURITY.md  libmei.h  mei.c  utils.h  version.cmake
doc/: Doxyfile.in
gitlint/: rules.py
include/linux/: mei.h  mei_i.h
